java/spring/infrastructure/helm/spring-mvc-sql/shared/elastic-eck/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  ingressClassName: nginx
  rules:  
  - host: kibana
    http:  
      paths:  
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: kibana-kb-http
            port:
              number: 5601
